# glinfo-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
.github/workflows/: test.yml
src/: main.rs
tests/: test_glinfo.rs
